beta: test servlets